Kubernetes files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-sentiment-analysis-service
  labels:
    app: my-sentiment-analysis-api
spec:
  type: ClusterIP
  ports:
  - port: 8500
    protocol: TCP
    targetPort: 8500
  selector:
    app: my-sentiment-analysis-api
