Kubernetes files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sentiment-analysis-ingress
spec:
  defaultBackend:
    service:
      name: my-sentiment-analysis-service
      port:
        number: 8500
